Package updates for eleventy-sass v3.0.0
Intermediate commit, this version compiles but doesn't update the website.

Was following instructions from README.md but packages out of date and program doesn't run.
- Clone this repository, then run `npm install` from the directory.
- `npm audit fix --force`
- `npm run-script serve` will build the project and serve the static files, but was getting an error `Package subpath './src/TemplateRender' is not defined by "exports" in static-timeline-generator\node_modules\@11ty\eleventy\package.json`.

- `npm install eleventy-sass@^3.0.0-beta.0` : Had to install eleventy-sass v3.0.0 to clear warnings
- I have Node v18.17.1, this version of eleventy-sass wants node >= 22.0.0
- Follow instructions to install Node v23.1.1 : https://nodejs.org/en/download/package-manager/current
- `npm audit fix` : packages updated, no more warnings.
- `npm run-script serve` : still fails with error, `You attempted to set one of Eleventy’s reserved data property names: content.`
- Renamed /src/_data/content.js to data.js, cleared the above error
- `npm run-script serve` : This works now, serving a page at localhost:8080, but that page isn't reflecting any of the changes made in data.js

- `npx update-browserslist-db@latest` : Ran this to clear terminal warning, `Browserslist: caniuse-lite is outdated.`

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
-    <%- include('/head', {head: content.head}) %>
+    <%- include('/head', {head: data.head}) %>
   </head>
   <body>
-    <% if (content.header) { %>
+    <% if (data.header) { %>
     <header class="page-header">
-      <% if (!utilities.isWrappedInParagraphTags(content.header)) { %>
+      <% if (!utilities.isWrappedInParagraphTags(data.header)) { %>
       <p>
-        <% } %> <%- content.header %> <% if (!utilities.isWrappedInParagraphTags(content.header)) {
+        <% } %> <%- data.header %> <% if (!utilities.isWrappedInParagraphTags(data.header)) {
         %>
       </p>
 
@@ -24,7 +24,7 @@
               <input type="checkbox" name="filter-shortcut" id="all" checked />
               <label for="all">All</label>
             </li>
-            <% content.filters.forEach(function(filter){ %>
+            <% data.filters.forEach(function(filter){ %>
             <li>
               <input type="checkbox" name="filter" id="<%= filter %>" checked />
               <label for="<%= filter %>"><%- utilities.sentenceCase(filter) %> </label>
@@ -34,7 +34,7 @@
         </header>
       </div>
       <article class="timeline">
-        <% content.entries.forEach(function(entry){ %>
+        <% data.entries.forEach(function(entry){ %>
         <div
           class="timeline-entry"
           data-category="<%= entry.categoriesString %>"
@@ -84,11 +84,11 @@
         <% }); %>
       </article>
     </section>
-    <% if (content.footer) { %>
+    <% if (data.footer) { %>
     <footer class="page-footer">
-      <% if (!utilities.isWrappedInParagraphTags(content.footer)) { %>
+      <% if (!utilities.isWrappedInParagraphTags(data.footer)) { %>
       <p>
-        <% } %> <%- content.footer %> <% if (!utilities.isWrappedInParagraphTags(content.footer)) {
+        <% } %> <%- data.footer %> <% if (!utilities.isWrappedInParagraphTags(data.footer)) {
         %>
       </p>
       <% } %>
