--- a/src/css/_colors.sass
+++ b/src/css/_colors.sass
@@ -1,4 +1,4 @@
-// To add new icon colors, just add a new entry to this map and then use it in your content.js file!
+// To add new icon colors, just add a new entry to this map and then use it in your data.js file!
 $icon-colors: ("green": #59bf51, "red": #bf413e, "grey":#999999)
 
 // Color tokens beginning with "dark-" are used in dark mode.
