--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
-    <%- include('/head', {head: data.head}) %>
+    <%- include('/head', {head: data.default.head}) %>
   </head>
   <body>
-    <% if (data.header) { %>
+    <% if (data.default.header) { %>
     <header class="page-header">
-      <% if (!utilities.isWrappedInParagraphTags(data.header)) { %>
+      <% if (!utilities.isWrappedInParagraphTags(data.default.header)) { %>
       <p>
-        <% } %> <%- data.header %> <% if (!utilities.isWrappedInParagraphTags(data.header)) {
+        <% } %> <%- data.default.header %> <% if (!utilities.isWrappedInParagraphTags(data.default.header)) {
         %>
       </p>
 
@@ -24,7 +24,7 @@
               <input type="checkbox" name="filter-shortcut" id="all" checked />
               <label for="all">All</label>
             </li>
-            <% data.filters.forEach(function(filter){ %>
+            <% data.default.filters.forEach(function(filter){ %>
             <li>
               <input type="checkbox" name="filter" id="<%= filter %>" checked />
               <label for="<%= filter %>"><%- utilities.sentenceCase(filter) %> </label>
@@ -34,7 +34,7 @@
         </header>
       </div>
       <article class="timeline">
-        <% data.entries.forEach(function(entry){ %>
+        <% data.default.entries.forEach(function(entry){ %>
         <div
           class="timeline-entry"
           data-category="<%= entry.categoriesString %>"
@@ -84,11 +84,11 @@
         <% }); %>
       </article>
     </section>
-    <% if (data.footer) { %>
+    <% if (data.default.footer) { %>
     <footer class="page-footer">
-      <% if (!utilities.isWrappedInParagraphTags(data.footer)) { %>
+      <% if (!utilities.isWrappedInParagraphTags(data.default.footer)) { %>
       <p>
-        <% } %> <%- data.footer %> <% if (!utilities.isWrappedInParagraphTags(data.footer)) {
+        <% } %> <%- data.default.footer %> <% if (!utilities.isWrappedInParagraphTags(data.default.footer)) {
         %>
       </p>
       <% } %>
