Set icon title for hover
When hover over icon, div title is displayed as hover text.  Customize some icon text, continue using icon name as default text for remaining.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -40,7 +40,17 @@
           data-category="<%= entry.categoriesString %>"
           aria-hidden="false"
         >
-          <div class="timeline-icon <%- entry.color || 'grey' %>" title="<%= entry.faicon %>">
+          <%
+            let divTitle = '';
+            switch (entry.faicon) {
+              case 'cat':
+                divTitle = 'fluffy';
+                break;
+              default:
+                divTitle = entry.faicon;
+            }
+          %>
+          <div class="timeline-icon <%- entry.color || 'grey' %>" title="<%= divTitle %>">
             <% if (entry.faicon) { %>
             <i class="fas fa-<%= entry.faicon %>" aria-hidden="true"></i>
             <% } %>
