Multiple images per entry
- Support multiple images per entry.
- When more than one image, wrap them across the bottom of the entry.

Based on dbrant/timeline-universe@7b83765#diff-9443cb379c1d40be9d96c44cda6893ce5f0b35677c2388260011f9e67e694c60R193

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -65,21 +65,38 @@
               <a id="<%= entry.id %>" href="#<%= entry.id %>"><i class="fas fa-link"></i></a><%-
               entry.title %>
             </h2>
-            <% if (entry.image) { %>
+            <% if (entry.images && entry.images.length == 1) { %>
             <div class="captioned-image image-right">
-              <% if (entry.image.link) { %><a href="<%= entry.image.link %>"
+              <% if (entry.images[0].link) { %><a href="<%= entry.images[0].link %>"
                 ><% } %>
-                <img src="<%= entry.image.src %>" alt="<%= entry.image.src %>" loading="lazy"/>
-                <% if (entry.image.link) { %></a
-              ><% } %> <% if (entry.image.caption) { %>
-              <span class="caption"><%- entry.image.caption %></span>
+                <img src="<%= entry.images[0].src %>" alt="<%= entry.images[0].src %>" loading="lazy"/>
+                <% if (entry.images[0].link) { %></a
+              ><% } %> <% if (entry.images[0].caption) { %>
+              <span class="caption"><%- entry.images[0].caption %></span>
               <% } %>
             </div>
-            <% } %> <% if (!utilities.isWrappedInParagraphTags(entry.body)) { %>
+            <% } %>
+            <% if (!utilities.isWrappedInParagraphTags(entry.body)) { %>
             <p>
               <% } %> <%- entry.body %> <% if (!utilities.isWrappedInParagraphTags(entry.body)) { %>
             </p>
-            <% } %> <% if (entry.links) { %>
+            <% } %>
+            <% if (entry.images && entry.images.length >= 2) { %>
+              <div class="captioned-images-bottom">
+              <% entry.images.forEach(function(image){ %>
+                <div class="captioned-image-bottom">
+                  <% if (image.link) { %><a href="<%= image.link %>"
+                    ><% } %>
+                    <img src="<%= image.src %>" alt="<%= image.src %>" loading="lazy" />
+                    <% if (image.link) { %></a
+                  ><% } %> <% if (image.caption) { %>
+                  <span class="caption"><%- image.caption %></span>
+                  <% } %>
+                </div>
+              <% }); %>
+              </div>
+            <% } %>
+            <% if (entry.links) { %>
             <ul>
               <% entry.links.forEach(function (link) { %>
               <li>
