--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -175,6 +175,28 @@ footer.page-footer
   &.landscape
     max-width: 200px
 
+.captioned-images-bottom
+  display: flex
+  justify-content: space-around
+  flex-wrap: wrap
+
+.captioned-image-bottom
+  flex-grow: 1
+  max-width: 180px
+  margin: 6px
+
+  .caption
+    display: block
+    line-height: 120%
+    font-style: italic
+    font-size: 90%
+
+  .attribution-link
+    font-size: 70%
+
+  &.landscape
+    max-width: 200px
+
 .image-right
   float: right
   padding: 10px 0 20px 20px
